chore: Add check API endpoint to QuoteController
